fix cursortext overflow

--- a/src/components/calendar/CursorText/index.module.scss
+++ b/src/components/calendar/CursorText/index.module.scss
@@ -34,6 +34,7 @@
 
 .track {
   display: inline-grid;
+  overflow: hidden;
 
   > * {
     grid-column: 1;
